@@ -37,6 +37,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       pbs_mom process. TRQ-937.
   b - Reduce the error messages in HA mode from moms. They now only log errors if
       no server could be contacted. TRQ-1385.
+  b - Fixed a seg-fault in send_depend_req. Also fixed a deadlock in the depend_on_term
+      TRQ-1430 and TRQ-1436
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
